feat: 新增A应用启动组件及相关功能实现
新增A应用启动组件snowy-a-app，包含以下功能：
1. 添加A应用启动类SnowyAApp及基础配置
2. 实现全局异常处理、权限认证等核心功能
3. 新增示例API接口及DTO定义
4. 添加Feign客户端调用支持
5. 完善日志配置和文档说明
6. 更新pom.xml依赖配置

新增开发规范文档，详细说明项目结构和插件架构设计

--- a/开发规范.md
+++ b/开发规范.md
@@ -1,6 +1,10 @@
-# 项目结构讲解
+# 框架介绍
 
-## snowy
+参考小诺框架官网及文档：
+
+[项目介绍]: ./README.md	"项目介绍"
+
+# 项目结构讲解
 
 ## snowy-cloud
 
@@ -13,11 +17,11 @@
   - snowy-plugin-gen == 代码生成插件
   - snowy-plugin-mobile == 移动端管理插件
   - snowy-plugin-sys == 系统功能插件
-    - snowy-plugin-sys-api 
-    - snowy-plugin-sys-api-context
-    - snowy-plugin-sys-feign
-    - snowy-plugin-sys-feign-provider
-    - snowy-plugin-sys-func
+    - snowy-plugin-sys-api == 系统功能API接口包
+    - snowy-plugin-sys-api-context == 系统功能API调用实现包2
+    - snowy-plugin-sys-feign == 系统功能feign接口包
+    - snowy-plugin-sys-feign-provider == 系统功能服务内feign接口实现包
+    - snowy-plugin-sys-func == 系统功能
       - src
         - main
           - java
@@ -36,12 +40,27 @@
                   - result == 结果集包
                   - service == service包
                     - impl == service实现类包
-- snowy-web-app == 主启动模块
+  - snowy-plugin-a == A模块功能插件
+    - snowy-plugin-sys-api == A模块功能API接口包
+    - snowy-plugin-sys-api-context == A模块功能API调用实现包2
+    - snowy-plugin-sys-feign == A模块功能feign接口包
+    - snowy-plugin-sys-feign-provider == A模块功能服务内feign接口实现包
+    - snowy-plugin-sys-func == A模块功能
+- snowy-modules == 启动模块
+  - snowy-web-app == 主启动模块
+  - snowy-biz-app == 业务服务主启动模块
+  - snowy-a-app == A服务主启动模块（示例）
+- snowy-server == 中间件服务
+  - snowy-actuator-app == 监控服务
+  - snowy-gateway-app == 网关服务
+  - snowy-nacos-app == 注册中心/配置中心
+  - snowy-sentinel-app == 限流服务
+  - snowy-xxl-job-app == 分布式调度服务
 
+# 插件介绍
 
+## 1. 插件架构概述
 
-# Snowy-Cloud系统功能模块(snowy-plugin-sys)架构分析报告
-## 1. 模块整体架构概述
 `snowy-plugin-sys` 模块采用分层架构设计，包含5个核心子模块：
 
 ```
@@ -57,8 +76,11 @@ snowy-plugin-sys/
 └── snowy-plugin-sys-func/          
 # 核心业务功能实现层
 ```
+
 ## 2. 子模块详细分析
+
 ### 2.1 snowy-plugin-sys-api模块
+
 功能定位 ：定义系统功能的API接口规范
 
 核心接口 ：
@@ -68,12 +90,15 @@ snowy-plugin-sys/
 - `SysRoleApi` ：角色管理接口
 - `SysMenuApi` ：菜单管理接口
 - `SysOrgApi` ：组织管理接口
+
 设计特点 ：
 
 - 采用接口分离原则，按业务领域划分接口
 - 提供标准化的API契约定义
 - 支持微服务间的松耦合调用
+
 ### 2.2 snowy-plugin-sys-api-context模块
+
 功能定位 ：为API接口提供上下文实现，作为微服务调用的适配层
 
 核心实现类 ：
@@ -81,36 +106,47 @@ snowy-plugin-sys/
 - `SysUserApiContextBean` ：用户API上下文实现
 - SysRoleApiContextBean：角色API上下文实现
 - SysApiContextBean：系统API上下文实现
+
 实现机制 ：
 
 - 实现对应的API接口
 - 通过Feign客户端调用远程服务
 - 提供本地缓存和异常处理
+
 ### 2.3 snowy-plugin-sys-feign模块
+
 功能定位 ：定义微服务间调用的Feign客户端接口
 
 核心Feign接口 ：
 
 - `SysUserFeign` ：用户服务Feign接口
 - `SysFeign` ：系统服务Feign接口
+
+
 技术特点 ：
 
 - 使用Spring Cloud OpenFeign进行服务调用
 - 支持负载均衡和服务发现
 - 提供声明式的HTTP客户端
+
 ### 2.4 snowy-plugin-sys-feign-provider模块
+
 功能定位 ：提供Feign接口的具体实现，暴露HTTP端点
 
 核心Provider类 ：
 
 - `SysUserFeignProvider` ：用户服务提供方实现
 - `SysFeignProvider` ：系统服务提供方实现
+
+
 实现方式 ：
 
 - 实现对应的Feign接口
 - 委托给具体的API实现类
 - 提供RESTful HTTP端点
+
 ### 2.5 snowy-plugin-sys-func模块
+
 功能定位 ：核心业务功能实现层，包含完整的业务逻辑
 
 模块结构 ：
@@ -127,16 +163,18 @@ snowy-plugin-sys-func/
 │   └── group/    # 分组管理
 └── core/         # 核心工具类
 ```
+
 核心Service实现 ：
 
 - `SysUserServiceImpl` ：用户管理业务实现
 - `SysRoleServiceImpl` ：角色管理业务实现
+
 ## 3. 模块间集成方式和依赖关系
+
 ### 3.1 依赖关系图
+
 ```
-snowy-web-app/snowy-biz-app
-    ↓ (依赖)
-snowy-plugin-sys-func
+snowy-biz-app
     ↓ (依赖)
 snowy-plugin-sys-api
     ↑ (实现)
@@ -145,8 +183,12 @@ snowy-plugin-sys-api-context
 snowy-plugin-sys-feign
     ↑ (实现)
 snowy-plugin-sys-feign-provider
+    ↓ (依赖)
+snowy-web-app
 ```
+
 ### 3.2 Maven依赖配置
+
 snowy-web-app的依赖配置 ：
 
 ```
@@ -154,13 +196,7 @@ snowy-web-app的依赖配置 ：
 <dependency>
     <groupId>vip.xiaonuo</groupId>
     <artifactId>snowy-plugin-sys-func</artifactId>
-</dependency>
-
-<!-- snowy-plugin-sys-feign，向外暴露feign接口 -->
-<dependency>
-    <groupId>vip.xiaonuo</groupId>
-    <artifactId>snowy-plugin-sys-feign</artifactId>
-</dependency>
+</dependency>	
 
 <!-- snowy-plugin-sys-feign-provider，向外暴露feign接口实现 -->
 <dependency>
@@ -168,6 +204,7 @@ snowy-web-app的依赖配置 ：
     <artifactId>snowy-plugin-sys-feign-provider</artifactId>
 </dependency>
 ```
+
 snowy-biz-app的依赖配置 ：
 
 ```
@@ -183,8 +220,11 @@ snowy-biz-app的依赖配置 ：
     <artifactId>snowy-plugin-sys-api-context</artifactId>
 </dependency>
 ```
+
 ## 4. 调用流程和时序图
+
 ### 4.1 跨服务调用流程
+
 ```
 业务应用(snowy-biz-app)
     ↓ 1. 注入SysUserApi
@@ -198,7 +238,9 @@ SysUserApi实现
     ↓ 5. 业务处理
 SysUserServiceImpl
 ```
+
 ### 4.2 本地调用流程
+
 ```
 Controller层
     ↓ 1. 注入Service
@@ -208,159 +250,90 @@ Mapper层 (MyBatis-Plus)
     ↓ 3. 数据库操作
 Database
 ```
+
 ## 5. 接口调用规范和参数传递机制
+
 ### 5.1 接口调用规范
+
 1. API接口规范 ：
 
 - 所有API接口继承统一的基础接口
 - 使用标准的参数对象(Param)和返回对象(Result)
 - 支持分页查询和批量操作
+
 2. Feign接口规范 ：
 
 - 使用 @FeignClient 注解标识服务名称
 - 使用标准的HTTP方法注解( @GetMapping , @PostMapping 等)
 - 支持请求参数绑定和响应体解析
+
 3. 参数传递机制 ：
 
 - 简单参数：直接传递基本类型
 - 复杂参数：使用专门的Param对象封装
 - 批量操作：使用List集合传递
+
 ### 5.2 示例代码
+
 ```
 // API接口定义
 public interface SysUserApi {
-    SysUser 
-    getUserByIdWithoutException
-    (String id);
-    List<SysUser> 
-    getUserListByIdListWithoutExcept
-    ion(List<String> idList);
+    SysUser getUserByIdWithoutException(String id);
+    List<SysUser> getUserListByIdListWithoutException(List<String> idList);
 }
 
 // Feign接口定义
-@FeignClient(name = 
-"snowy-web-app", contextId = 
-"sysUserFeign")
+@FeignClient(name = "snowy-web-app", contextId = "sysUserFeign")
 public interface SysUserFeign {
-    @GetMapping("/feign/sys/user/
-    getUserByIdWithoutException")
-    SysUser 
-    getUserByIdWithoutException
-    (@RequestParam("id") String id);
+    @GetMapping("/feign/sys/user/getUserByIdWithoutException")
+    SysUser getUserByIdWithoutException(@RequestParam("id") String id);
 }
 ```
+
 ## 6. 异常处理机制
+
 ### 6.1 异常处理层次
+
 1. 全局异常处理 ：
 
 - `GlobalExceptionUtil.java` ：统一异常处理工具
 - 支持多种异常类型的分类处理
 - 返回标准化的错误响应格式
+
 2. 业务异常处理 ：
 
 - CommonException ：通用业务异常
 - 自定义错误码和错误消息
 - 支持异常链传递
-3. Feign异常处理 ：
 
-- 网络异常自动重试
-- 服务降级和熔断机制
-- 异常信息透传
 ### 6.2 异常处理示例
+
 ```
-public static CommonResult<String> 
-getCommonResult(Exception e) {
-    if (e instanceof 
-    CommonException 
-    commonException) {
+public static CommonResult<String> getCommonResult(Exception e) {
+    if (e instanceof CommonException commonException) {
         // 通用业务异常，直接返回给前端
-        return CommonResult.get
-        (commonException.getCode(), 
-                               commo
-                               nExce
-                               ption
-                               .
-                               getMs
-                               g(), 
-                               null)
-                               ;
+        return CommonResult.get(commonException.getCode(),commonException.getMsg(), null);
     } else {
         // 未知异常返回服务器异常
-        log.error(">>> 服务器未知异
-        常，具体信息：", e);
-        return CommonResult.error("
-        服务器异常");
+        log.error(">>> 服务器未知异常，具体信息：", e);
+        return CommonResult.error("服务器异常");
     }
 }
 ```
+
 ## 7. 总结
-Snowy-Cloud的 `snowy-plugin-sys` 模块采用了优秀的分层架构设计：
+
+Snowy-Cloud的 `snowy-plugin-sys` 模块采用了分层架构设计：
 
 优势 ：
 
-1. 1.模块化设计 ：清晰的职责分离，便于维护和扩展
+1. 模块化设计 ：清晰的职责分离，便于维护和扩展
 
-2. 2.微服务支持 ：通过Feign实现服务间的松耦合调用
+2. 微服务支持 ：通过Feign实现服务间的松耦合调用
 
-3. 3.标准化接口 ：统一的API规范和调用方式
+3. 标准化接口 ：统一的API规范和调用方式
 
-4. 4.异常处理 ：完善的异常处理机制和错误响应
+4. 异常处理 ：完善的异常处理机制和错误响应
 
-5. 5.可扩展性 ：插件化架构支持功能模块的灵活组合
+5. 可扩展性 ：插件化架构支持功能模块的灵活组合
 
-   技术特点 ：
-
-- 基于Spring Cloud微服务架构
-- 使用MyBatis-Plus进行数据持久化
-- 集成Sa-Token进行权限控制
-- 支持多种数据库和国产化适配
-这种架构设计为系统提供了良好的可维护性、可扩展性和高可用性，是企业级应用开发的最佳实践。
-
-9/9 任务完成
-
-任务完成
-
-详细分析snowy-plugin-sys模块的整体架构和子模块组成
-
-分析snowy-plugin-sys-api模块的接口定义和功能
-
-分析snowy-plugin-sys-api-context模块的上下文管理功能
-
-分析snowy-plugin-sys-feign模块的Feign客户端实现
-
-分析snowy-plugin-sys-feign-provider模块的服务提供方实现
-
-详细分析snowy-plugin-sys-func模块的核心业务功能实现
-
-分析模块间的集成方式、依赖关系和调用流程
-
-整理接口调用规范、参数传递机制和异常处理机制
-
-编写完整的分析报告和调用时序图
-
-我已经完成了对Snowy-Cloud项目中snowy-plugin-sys系统功能模块的全面分析。这份详细的架构分析报告涵盖了您要求的所有内容：
-
-## 主要分析成果：
-### 1. 模块架构分析
-- 详细解析了5个子模块的职责和功能
-- 分析了分层架构设计的优势
-- 说明了插件化模块的组织方式
-### 2. 子模块功能说明
-- snowy-plugin-sys-api ：API接口定义层，提供标准化契约
-- snowy-plugin-sys-api-context ：上下文实现层，作为微服务调用适配器
-- snowy-plugin-sys-feign ：Feign客户端接口层，支持声明式HTTP调用
-- snowy-plugin-sys-feign-provider ：Feign服务提供方，暴露HTTP端点
-- snowy-plugin-sys-func ：核心业务实现层，包含完整业务逻辑
-### 3. 集成机制分析
-- 模块间的依赖关系图和Maven配置
-- 跨服务调用流程和本地调用流程
-- 微服务架构下的服务发现和负载均衡
-### 4. 调用规范和机制
-- 接口调用规范和参数传递机制
-- RESTful API设计标准
-- Feign客户端的使用规范
-### 5. 异常处理机制
-- 全局异常处理策略
-- 业务异常和系统异常的分类处理
-- Feign调用的异常处理和服务降级
-这个分析报告为您提供了完整的技术架构视图，有助于理解Snowy-Cloud框架的设计理念和最佳实践，为后续的开发和维护工作提供了重要参考。
