docs: 添加飞行计划审核审批系统设计与技术选型文档
添加详细的技术选型分析文档，包含业务需求分析、候选方案对比及最终确定的Activiti+LiteFlow组合方案
新增系统架构设计、BPMN流程定义、LiteFlow规则实现及两者集成的详细说明

--- a/审核审批业务技术选型调研.md
+++ b/审核审批业务技术选型调研.md
@@ -1,345 +1,132 @@
-# 框架介绍
-
-参考小诺框架官网及文档：
-
-[项目介绍]: ./README.md	"项目介绍"
-
-# 项目结构讲解
-
-## snowy-cloud
-
-- snowy-common == 基础通用模块
-- snowy-plugin == 插件包
-  - snowy-plugin-auth == 登录鉴权插件
-  - snowy-plugin-biz == 业务功能插件
-  - snowy-plugin-client == C端功能插件
-  - snowy-plugin-dev == 开发工具插件
-  - snowy-plugin-gen == 代码生成插件
-  - snowy-plugin-mobile == 移动端管理插件
-  - snowy-plugin-sys == 系统功能插件
-    - snowy-plugin-sys-api == 系统功能API接口包
-    - snowy-plugin-sys-api-context == 系统功能API调用实现包2
-    - snowy-plugin-sys-feign == 系统功能feign接口包
-    - snowy-plugin-sys-feign-provider == 系统功能服务内feign接口实现包
-    - snowy-plugin-sys-func == 系统功能
-      - src
-        - main
-          - java
-            - vip.xiaonuo.sys == 模块包
-              - core
-                - config == 模块配置包
-                  - xxx == 模块其他包，如enums枚举包、util工具包、listener监听器包等
-              - modular
-                - user == 功能包
-                  - controller == 控制器包
-                  - entity == 实体包
-                  - mapper == mapper包
-                    - mapping == mapping包
-                  - param == 参数包
-                  - provider == api实现包
-                  - result == 结果集包
-                  - service == service包
-                    - impl == service实现类包
-  - snowy-plugin-a == A模块功能插件
-    - snowy-plugin-sys-api == A模块功能API接口包
-    - snowy-plugin-sys-api-context == A模块功能API调用实现包2
-    - snowy-plugin-sys-feign == A模块功能feign接口包
-    - snowy-plugin-sys-feign-provider == A模块功能服务内feign接口实现包
-    - snowy-plugin-sys-func == A模块功能
-- snowy-modules == 启动模块
-  - snowy-web-app == 主启动模块
-  - snowy-biz-app == 业务服务主启动模块
-  - snowy-a-app == A服务主启动模块（示例）
-- snowy-server == 中间件服务
-  - snowy-actuator-app == 监控服务
-  - snowy-gateway-app == 网关服务
-  - snowy-nacos-app == 注册中心/配置中心
-  - snowy-sentinel-app == 限流服务
-  - snowy-xxl-job-app == 分布式调度服务
-
-# 插件介绍
-
-## 1. 插件架构概述
-
-`snowy-plugin-sys` 模块采用分层架构设计，包含5个核心子模块：
-
-```
-snowy-plugin-sys/
-├── snowy-plugin-sys-api/           
-# API接口定义层
-├── snowy-plugin-sys-api-context/   
-# API上下文实现层  
-├── snowy-plugin-sys-feign/         
-# Feign客户端接口层
-├── snowy-plugin-sys-feign-provider/
-# Feign服务提供方实现层
-└── snowy-plugin-sys-func/          
-# 核心业务功能实现层
-```
-
-## 2. 子模块详细分析
-
-### 2.1 snowy-plugin-sys-api模块
-
-功能定位 ：定义系统功能的API接口规范
-
-核心接口 ：
-
-- `SysApi` ：系统基础功能接口
-- `SysUserApi` ：用户管理接口
-- `SysRoleApi` ：角色管理接口
-- `SysMenuApi` ：菜单管理接口
-- `SysOrgApi` ：组织管理接口
-
-设计特点 ：
-
-- 采用接口分离原则，按业务领域划分接口
-- 提供标准化的API契约定义
-- 支持微服务间的松耦合调用
-
-### 2.2 snowy-plugin-sys-api-context模块
-
-功能定位 ：为API接口提供上下文实现，作为微服务调用的适配层
-
-核心实现类 ：
-
-- `SysUserApiContextBean` ：用户API上下文实现
-- SysRoleApiContextBean：角色API上下文实现
-- SysApiContextBean：系统API上下文实现
-
-实现机制 ：
-
-- 实现对应的API接口
-- 通过Feign客户端调用远程服务
-- 提供本地缓存和异常处理
-
-### 2.3 snowy-plugin-sys-feign模块
-
-功能定位 ：定义微服务间调用的Feign客户端接口
-
-核心Feign接口 ：
-
-- `SysUserFeign` ：用户服务Feign接口
-- `SysFeign` ：系统服务Feign接口
-
-
-技术特点 ：
-
-- 使用Spring Cloud OpenFeign进行服务调用
-- 支持负载均衡和服务发现
-- 提供声明式的HTTP客户端
-
-### 2.4 snowy-plugin-sys-feign-provider模块
-
-功能定位 ：提供Feign接口的具体实现，暴露HTTP端点
-
-核心Provider类 ：
-
-- `SysUserFeignProvider` ：用户服务提供方实现
-- `SysFeignProvider` ：系统服务提供方实现
-
-
-实现方式 ：
-
-- 实现对应的Feign接口
-- 委托给具体的API实现类
-- 提供RESTful HTTP端点
-
-### 2.5 snowy-plugin-sys-func模块
-
-功能定位 ：核心业务功能实现层，包含完整的业务逻辑
-
-模块结构 ：
-
-```
-snowy-plugin-sys-func/
-├── modular/
-│   ├── user/     # 用户管理
-│   ├── role/     # 角色管理
-│   ├── org/      # 组织管理
-│   ├── position/ # 职位管理
-│   ├── resource/ # 资源管理
-│   ├── relation/ # 关系管理
-│   └── group/    # 分组管理
-└── core/         # 核心工具类
-```
-
-核心Service实现 ：
-
-- `SysUserServiceImpl` ：用户管理业务实现
-- `SysRoleServiceImpl` ：角色管理业务实现
-
-## 3. 模块间集成方式和依赖关系
-
-### 3.1 依赖关系图
-
-```
-snowy-biz-app
-    ↓ (依赖)
-snowy-plugin-sys-api
-    ↑ (实现)
-snowy-plugin-sys-api-context
-    ↓ (调用)
-snowy-plugin-sys-feign
-    ↑ (实现)
-snowy-plugin-sys-feign-provider
-    ↓ (依赖)
-snowy-web-app
-```
-
-### 3.2 Maven依赖配置
-
-snowy-web-app的依赖配置 ：
-
-```
-<!-- 系统功能插件 -->
-<dependency>
-    <groupId>vip.xiaonuo</groupId>
-    <artifactId>snowy-plugin-sys-func</artifactId>
-</dependency>	
-
-<!-- snowy-plugin-sys-feign-provider，向外暴露feign接口实现 -->
-<dependency>
-    <groupId>vip.xiaonuo</groupId>
-    <artifactId>snowy-plugin-sys-feign-provider</artifactId>
-</dependency>
-```
-
-snowy-biz-app的依赖配置 ：
-
-```
-<!-- 系统功能插件Feign接口 -->
-<dependency>
-    <groupId>vip.xiaonuo</groupId>
-    <artifactId>snowy-plugin-sys-feign</artifactId>
-</dependency>
-
-<!-- 系统功能插件Api接口context -->
-<dependency>
-    <groupId>vip.xiaonuo</groupId>
-    <artifactId>snowy-plugin-sys-api-context</artifactId>
-</dependency>
-```
-
-## 4. 调用流程和时序图
-
-### 4.1 跨服务调用流程
-
-```
-业务应用(snowy-biz-app)
-    ↓ 1. 注入SysUserApi
-SysUserApiContextBean
-    ↓ 2. 调用SysUserFeign
-SysUserFeign (Feign客户端)
-    ↓ 3. HTTP调用
-SysUserFeignProvider (snowy-web-app)
-    ↓ 4. 委托调用
-SysUserApi实现
-    ↓ 5. 业务处理
-SysUserServiceImpl
-```
-
-### 4.2 本地调用流程
-
-```
-Controller层
-    ↓ 1. 注入Service
-SysUserServiceImpl
-    ↓ 2. 业务逻辑处理
-Mapper层 (MyBatis-Plus)
-    ↓ 3. 数据库操作
-Database
-```
-
-## 5. 接口调用规范和参数传递机制
-
-### 5.1 接口调用规范
-
-1. API接口规范 ：
-
-- 所有API接口继承统一的基础接口
-- 使用标准的参数对象(Param)和返回对象(Result)
-- 支持分页查询和批量操作
-
-2. Feign接口规范 ：
-
-- 使用 @FeignClient 注解标识服务名称
-- 使用标准的HTTP方法注解( @GetMapping , @PostMapping 等)
-- 支持请求参数绑定和响应体解析
-
-3. 参数传递机制 ：
-
-- 简单参数：直接传递基本类型
-- 复杂参数：使用专门的Param对象封装
-- 批量操作：使用List集合传递
-
-### 5.2 示例代码
-
-```
-// API接口定义
-public interface SysUserApi {
-    SysUser getUserByIdWithoutException(String id);
-    List<SysUser> getUserListByIdListWithoutException(List<String> idList);
-}
-
-// Feign接口定义
-@FeignClient(name = "snowy-web-app", contextId = "sysUserFeign")
-public interface SysUserFeign {
-    @GetMapping("/feign/sys/user/getUserByIdWithoutException")
-    SysUser getUserByIdWithoutException(@RequestParam("id") String id);
-}
-```
-
-## 6. 异常处理机制
-
-### 6.1 异常处理层次
-
-1. 全局异常处理 ：
-
-- `GlobalExceptionUtil.java` ：统一异常处理工具
-- 支持多种异常类型的分类处理
-- 返回标准化的错误响应格式
-
-2. 业务异常处理 ：
-
-- CommonException ：通用业务异常
-- 自定义错误码和错误消息
-- 支持异常链传递
-
-### 6.2 异常处理示例
-
-```
-public static CommonResult<String> getCommonResult(Exception e) {
-    if (e instanceof CommonException commonException) {
-        // 通用业务异常，直接返回给前端
-        return CommonResult.get(commonException.getCode(),commonException.getMsg(), null);
-    } else {
-        // 未知异常返回服务器异常
-        log.error(">>> 服务器未知异常，具体信息：", e);
-        return CommonResult.error("服务器异常");
-    }
-}
-```
-
-## 7. 总结
-
-Snowy-Cloud的 `snowy-plugin-sys` 模块采用了分层架构设计：
-
-优势 ：
-
-1. 模块化设计 ：清晰的职责分离，便于维护和扩展
-
-2. 微服务支持 ：通过Feign实现服务间的松耦合调用
-
-3. 标准化接口 ：统一的API规范和调用方式
-
-4. 异常处理 ：完善的异常处理机制和错误响应
-
-5. 可扩展性 ：插件化架构支持功能模块的灵活组合
-
-# 飞行计划审核审批系统 - （Activiti + LiteFlow）设计与实现
-
-## 1. 整体架构设计
+### 飞行计划审核审批业务技术选型调研
+
+
+#### 1. 业务需求分析
+
+首先，根据核心业务场景：飞行计划审核审批
+
+**审核功能**：平台内内置审核单位或按照飞行计划区域审核，会出现多单位同时审核或顺序审核的功能。 
+
+**审批功能**：上报给上级平台，等待上级审批结果；或有可能存在多个步骤先上传资质文件等待审批结果，通过后再上传申报文件等待审批结果功能。 还有可能关闭审核功能，直接申报到上级平台。
+
+- **核心业务流**: 飞行计划的审核与审批。
+- **审核功能 (平台内处理)**:
+  - **审核单位**: 内置审核单位 或 按飞行计划区域动态确定审核单位。
+  - **审核模式**:
+    - **并行审核**: 多个单位同时对同一份计划进行审核。
+    - **顺序审核**: 多个单位按预定顺序依次审核。
+  - **灵活性**: 审核单位的组合和顺序可能根据计划类型、区域、风险等级等因素动态变化。
+- **审批功能 (跨平台处理)**:
+  - **上报上级**: 将计划上报给上级平台，等待其审批结果。
+  - **多步骤审批**: 可能存在多阶段上报，例如：
+    1. 先上传资质文件，等待审批。
+    2. 资质审批通过后，再上传申报文件，等待最终审批。
+- **特殊流程**:
+  - **跳过审核**: 系统需要支持关闭审核功能，直接将计划申报到上级平台。
+
+**核心挑战**:
+
+1. **流程的动态性**: 审核单位的组成和顺序不是固定的，需要根据业务规则动态生成。
+2. **流程的混合性**: 流程中既有**同步执行**的逻辑（如获取审核单位、跳过审核流程），也有**异步等待**的任务（如等待审核单位结果、上送上级审批）。
+3. **规则的复杂性**: 决定审核单位、审核顺序、是否需要审核等，是一套复杂的业务规则。
+4. **流程的可视化与管理**: 需要对流程的执行状态进行跟踪、管理和干预。
+
+------
+
+#### 2. 候选技术方案分析
+
+##### 2.1 LiteFlow：轻量级规则引擎
+
+- **核心定位**: 专注于**逻辑编排**和**动态规则执行**。它将业务逻辑拆分成一个个独立的组件（`Node`），然后通过规则文件（如 XML、EL 表达式）来定义这些组件的执行顺序和条件。
+- **核心优势**:
+  - **极致灵活**: 非常适合处理动态、复杂的业务规则。审核单位的动态组合和顺序可以轻松通过规则文件来配置，无需修改代码。
+  - **高性能**: 设计轻量，执行效率高。
+  - **开发便捷**: 学习曲线相对平缓，易于集成。
+- **核心劣势**:
+  - **流程管理弱**: 不是一个传统意义上的工作流引擎，缺乏对 **任务（Task）** 的概念。它无法很好地管理 “某个单位待审核” 这样的任务状态，也没有内置的任务分配、签收、驳回等功能。
+  - **可视化缺失**: 没有标准的流程定义可视化工具（如 BPMN 编辑器），流程逻辑主要体现在规则文件中，对于非技术人员（如业务分析师）不够友好。
+  - **状态持久化**: 需要自行设计和实现流程实例的状态持久化方案，以支持长时间运行的流程（如等待单位审核、上级审批）。
+
+##### 2.2 Activiti：成熟的工作流引擎
+
+- **核心定位**: 专注于**流程自动化**和**任务管理**。它遵循 BPMN 2.0 标准，通过图形化的方式定义流程，并内置了强大的任务管理、角色分配和流程实例跟踪功能。
+- **核心优势**:
+  - **强大的流程建模**: BPMN 标准提供了丰富的流程元素（如用户任务、服务任务、并行网关、排他网关等），能很好地建模串行、并行、分支等复杂流程。
+  - **完善的任务生命周期管理**: 天然支持任务的创建、分配、签收、完成、驳回等，非常适合处理 “审核” 这类需要人参与的任务。
+  - **可视化与监控**: 提供流程设计器和管理控制台，可以直观地查看和管理流程定义与实例。
+  - **健壮与成熟**: 作为一个老牌工作流引擎，在各种复杂的企业级应用中得到了广泛验证。
+- **核心劣势**:
+  - **规则处理能力相对弱**: 虽然可以通过网关条件（Expression）来实现分支，但对于 “根据计划区域动态获取 N 个审核单位并进行并行审核” 这类高度动态的规则，用纯 BPMN 建模会非常繁琐和不灵活，通常需要在 Java 代码中实现，破坏了流程的纯粹性。
+  - **重量感**: 功能强大意味着配置和学习成本相对较高。
+
+------
+
+#### 3. 技术选型与方案设计
+
+基于业务需求和技术特性，来分析如何选择。
+
+**方案一：仅使用 LiteFlow**
+
+- **适用场景**: 如果审核审批流程非常简单，或者公司技术团队希望完全自主掌控所有流程逻辑。
+- **优势**:
+  - 开发灵活，迭代速度快。
+  - 系统整体架构轻量。
+- **风险与挑战**:
+  - **任务管理是硬伤**: 需要从零开始构建一套任务分配、签收、通知、催办的系统。这相当于重新造一个简化版的工作流引擎。
+  - **状态追踪困难**: 对于长时间运行的流程（如上送上级审批），需要自己设计数据库表结构来持久化流程状态，实现复杂。
+  - **业务可读性差**: 业务人员无法直观地理解流程，流程变更需要开发人员修改规则文件。
+
+**方案二：仅使用 Activiti**
+
+- **适用场景**: 如果审核单位和审核顺序相对固定，或者可以通过有限的几种模式来覆盖大部分场景。
+- **优势**:
+  - 开箱即用的任务管理和流程可视化。
+  - 成熟稳定，社区支持强大。
+- **风险与挑战**:
+  - **动态审核单位处理困难**: 当审核单位需要动态确定时，通常的做法是：
+    1. 在流程启动前，通过 Java 代码计算出审核单位列表。
+    2. 在 BPMN 模型中预先定义一个足够数量的并行网关和用户任务节点。
+    3. 通过代码动态激活对应数量的任务节点，并分配给相应的单位。
+  - 这种方式非常不优雅，扩展性差，且 BPMN 模型会变得臃肿不堪。
+  - **规则与流程耦合**: 动态逻辑混入 Java 代码，使得流程定义不够纯粹，难以维护。
+
+**方案三：Activiti + LiteFlow 组合使用**
+
+- **核心理念**: **Activiti 负责 “宏观” 的流程骨架和任务生命周期管理，LiteFlow 负责 “微观” 的动态规则计算和逻辑编排。**
+- **架构设计**:
+  1. **Activiti 定义主流程**:
+     - 使用 BPMN 设计整个飞行计划的主流程骨架。
+     - 定义清晰的节点：如 “提交申请” -> “平台审核阶段” -> “上报上级审批” -> “审批完成”。
+     - 对于需要多人参与的审核任务，使用 **“用户任务 (User Task)”**。
+     - 对于需要调用外部系统或等待外部结果的，使用 **“服务任务 (Service Task)”** 或 **“接收任务 (Receive Task)”**。
+  2. **LiteFlow 嵌入关键节点**:
+     - 在 Activiti 的 “平台审核阶段” 这个节点中，不直接定义具体的审核人。
+     - 而是通过一个 **“服务任务 (Service Task)”** 来调用 LiteFlow 的引擎。
+     - LiteFlow 引擎根据当前飞行计划的上下文（区域、类型等），执行以下操作：
+       - **规则计算**: 动态计算出需要参与审核的单位列表。
+       - **逻辑编排**: 根据业务规则，决定是并行审核还是顺序审核。
+       - **任务创建**: LiteFlow 执行完毕后，将计算出的审核单位列表返回给 Activiti。
+     - Activiti 接收到列表后，通过其 API 动态创建多个并行的 **“用户任务”**，分配给相应的审核单位。
+- **如何实现 “跳过审核”**:
+  - 在 Activiti 的主流程开始处，设置一个**排他网关 (Exclusive Gateway)**。
+  - 网关的条件判断逻辑（Expression）可以再次调用 LiteFlow。
+  - LiteFlow 根据计划类型或其他规则，返回一个布尔值（`needReview`）。
+  - Activiti 根据返回结果，决定流程是走向 “平台审核阶段” 还是直接走向 “上报上级审批”。
+- **实现 “多步骤审批”**:
+  - 在 BPMN 模型中，清晰地定义两个连续的 “上报审批” 服务任务节点即可。第一个节点上传资质文件并等待，完成后进入第二个节点上传申报文件并等待。
+
+**最终选择**:
+
+**方案三：Activiti + LiteFlow 组合使用**。
+
+- **Activiti** 提供了坚实的**流程骨架**和**任务管理**能力，保证了系统的健壮性和可管理性。
+- **LiteFlow** 提供了强大的**动态规则计算**能力，保证了业务逻辑的灵活性和可扩展性。
+
+这种分层解耦的设计，使得业务流程的结构性变更（如增加一个审批阶段）可以在 Activiti 的 BPMN 模型中轻松完成，而审核单位的规则变更（如增加一个新的审核区域）则可以在 LiteFlow 的规则文件中快速配置，两者互不干扰，极大地提升了系统的可维护性和未来的扩展能力。
+
+### 飞行计划审核审批系统 - 方案三（Activiti + LiteFlow）设计与实现
+
+#### 1. 整体架构设计
 
 将系统分为三层：**表现层**、**业务逻辑层**和**数据持久层**。Activiti 和 LiteFlow 都位于业务逻辑层。
 
@@ -386,7 +173,7 @@ Snowy-Cloud的 `snowy-plugin-sys` 模块采用了分层架构设计：
 └───────────────┘
 ```
 
-## 2. Activiti 流程设计 (BPMN 模型)
+#### 2. Activiti 流程设计 (BPMN 模型)
 
 使用 BPMN 2.0 来定义主流程。以下是一个简化的流程定义 (`flightPlanProcess.bpmn20.xml`)：
 
@@ -450,7 +237,7 @@ Snowy-Cloud的 `snowy-plugin-sys` 模块采用了分层架构设计：
   - **多实例 (`multiInstanceLoopCharacteristics`)**: `isSequential="false"` 表示并行审核。`activiti:collection="${reviewUnitsList}"` 会从流程变量中获取一个列表（如 `["unit1", "unit2"]`），并为列表中的每一项创建一个任务实例。
   - `completionCondition` 定义了多实例任务何时完成。`${nrOfCompletedInstances >= nrOfInstances}` 表示所有审核单位都完成后，该节点才算通过。
 
-## 3. LiteFlow 规则与组件设计
+#### 4. LiteFlow 规则与组件设计
 
 LiteFlow 负责实现 `ServiceTask_GetReviewers` 中调用的动态逻辑。
 
@@ -493,7 +280,7 @@ public class GetReviewUnitsNode extends NodeComponent {
 
 这个例子很简单，如果逻辑更复杂（例如，先根据区域筛选，再根据任务类型过滤），可以用 `THEN`, `WHEN` 等关键字编排多个组件。
 
-## 4. Activiti 与 LiteFlow 集成实现
+#### 5. Activiti 与 LiteFlow 集成实现
 
 **步骤 1: 实现 Java Delegate**，获取审核单位
 
@@ -560,7 +347,7 @@ public class FlightPlanServiceImpl implements FlightPlanService {
 
 当 Activiti 流程到达 `UserTask_Review` 节点时，会创建任务。前端通过 `TaskService` 查询待办任务。用户完成审核后，调用 `taskService.complete(taskId, variables)` 来完成任务并推进流程。
 
-## 5. 总结与流程示例
+### 总结与流程示例
 
 1. **用户提交**: 用户在 UI 上提交飞行计划，保存数据并调用启动 Activiti 流程。
 2. **Activiti 流转**: 流程到达 `ServiceTask_GetReviewers`。
