1.更新后续任务

--- a/开发规范.md
+++ b/开发规范.md
@@ -565,3 +565,11 @@ public class FlightPlanServiceImpl implements FlightPlanService {
 8. **流程继续**: 当最后一个审核员（比如 B）完成任务后，`completionCondition` 满足，`UserTask_Review` 节点结束。
 9. **上报审批**: 流程流转到 `ServiceTask_SubmitApproval`，调用相应的 Delegate 将计划上报给上级平台。
 10. **流程结束**: 上报完成后，流程到达 `EndEvent`，整个飞行计划审核审批流程结束。
+
+## 6.后续任务
+1. 整理吉安、十堰、杭州、龙岗典型项目的审核审批流程图 - 小东、郭盛
+2. 根据流程图去分析定义出工作流引擎、规则流引擎所承担的职责和功能 - 任
+3. 功能设计、兼容性较强、空管业务涵盖全 - 超哥
+4. 数据结构定好、功能范围定义 - 超哥
+5. 评估研发周期
+6. 评估资源使用
